--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastmcp>=0.4.1",
     "mcp>=1.1.2",
     "ollama>=0.4.4",
     "python-dotenv>=1.0.1",
