--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
             "program": "examples/ollama_example.py",
             "console": "integratedTerminal",
             "args": [
-                "uv",
-                "run",
-                "./server/server.py"
+                "examples/server.json"
             ],
             "cwd": "${workspaceFolder}"
         }
