--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "colorlog>=6.9.0",
+    "fastapi>=0.115.12",
     "fastmcp>=0.4.1",
     "mcp>=1.6.0",
     "ollama>=0.4.7",
@@ -19,3 +20,6 @@ line-length = 150
 # indent-style = 'tab'
 docstring-code-format = true
 line-ending = 'lf'
+
+[dependency-groups]
+dev = ["uvicorn[standard]>=0.34.0"]
