--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "colorlog>=6.9.0",
     "fastapi>=0.115.12",
     "fastmcp>=0.4.1",
+    "flask>=3.1.0",
+    "flask-cors>=5.0.1",
+    "hypercorn>=0.17.3",
     "mcp>=1.6.0",
     "ollama>=0.4.7",
 ]
