never scan output for task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
             "command": "uvicorn",
             "args": [
                 "clients.api:app"
-            ]
+            ],
+            "problemMatcher": []
         }
     ]
 }
